prometheus-operator/admission-webhook/manifests/service.admission-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: prometheus-operator-admission-webhook
    app.kubernetes.io/version: 0.93.1
  name: admission-webhook
  namespace: prometheus-operator
spec:
  ports:
    - name: https
      port: 443
      targetPort: https
  selector:
    app.kubernetes.io/name: prometheus-operator-admission-webhook
